--- a/SeptemberFitness.BL/SeptemberFitness.BL.csproj
+++ b/SeptemberFitness.BL/SeptemberFitness.BL.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="Controller\UserControllercs.cs" />
+    <Compile Include="Controller\UserControllers.cs" />
     <Compile Include="Model\Gender.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
