add Food and Eating

--- a/SeptemberFitness.BL/SeptemberFitness.BL.csproj
+++ b/SeptemberFitness.BL/SeptemberFitness.BL.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Controller\UserControllers.cs" />
+    <Compile Include="Model\Eating.cs" />
+    <Compile Include="Model\Food.cs" />
     <Compile Include="Model\Gender.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
