--- a/SeptemberFitness.BL/SeptemberFitness.BL.csproj
+++ b/SeptemberFitness.BL/SeptemberFitness.BL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Controller\ControllerBase.cs" />
     <Compile Include="Controller\EatingController.cs" />
     <Compile Include="Controller\UserControllers.cs" />
     <Compile Include="Model\Eating.cs" />
