--- a/SeptemberFitness.BL/SeptemberFitness.BL.csproj
+++ b/SeptemberFitness.BL/SeptemberFitness.BL.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Controller\ControllerBase.cs" />
     <Compile Include="Controller\EatingController.cs" />
     <Compile Include="Controller\ExerciseContoller.cs" />
+    <Compile Include="Controller\IDataSaver.cs" />
+    <Compile Include="Controller\SerializeDataSaver.cs" />
     <Compile Include="Controller\UserControllers.cs" />
     <Compile Include="Model\Activity.cs" />
     <Compile Include="Model\Eating.cs" />
